# Caso-Integrador-Tema-4

./: CMakeLists.txt  README.md  main.cpp
tests/: test.cpp  test.h
variant/: Variant.cpp  Variant.h
